src/objects/Service_Assignment__c.object
<CustomObject>
    <description>NOTES Service Assignments describe the services that can be performed for a Person Being Served. This object is master-detail to Admissions.</description>
    <fields>
        <fullName>Admission__c</fullName>
        <label>Admission</label>
        <referenceTo>Admission__c</referenceTo>
        <relationshipLabel>Service Assignment</relationshipLabel>
        <relationshipName>Service_Agreements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <formula>Service_Location__r.Alias__c</formula>
        <label>Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avatar_Upload_ID__c</fullName>
        <externalId>true</externalId>
        <label>Avatar Upload ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_System__c</fullName>
        <label>Billing System</label>
        <picklist>
            <picklistValues>
                <fullName>WV Avatar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN   Avatar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Avatar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WI Avatar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN Avatar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH Avatar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ Avatar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ Avatar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE Avatar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC Avatar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA Avatar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL Avatar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA Avatar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI Avatar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cause_of_Injury__c</fullName>
        <description>populated on conversion from referral - brain injury details for MN</description>
        <label>Cause of Injury</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Permanency_Goal__c</fullName>
        <label>Child Permanency Goal</label>
        <picklist>
            <picklistValues>
                <fullName>Reunification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardianship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent Placement with Relative (PPWR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Another Planned Permanency Living Arrangement (APPLA)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_Service_Goal__c</fullName>
        <label>Child Service Goal</label>
        <picklist>
            <picklistValues>
                <fullName>Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete Secondary Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crisis Intervention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Preservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Living/Emancipation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Readiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Respite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prevent Placement Disruption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduction of Presenting Behaviors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remain in the Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stay in School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transition to Adult Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Clinician__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Staff Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please choose a clinician from the list</errorMessage>
            <filterItems>
                <field>TMN_User__c.Operating_Group__c</field>
                <operation>equals</operation>
                <valueField>$User.Operating_Group__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TMN_User__c</referenceTo>
        <relationshipLabel>Service Assignment</relationshipLabel>
        <relationshipName>Service_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Concatenation__c</fullName>
        <description>A field that contains a ~ delimited listing of all contracts associated with the Service Assignment, populated by before insert and before update trigger actions.</description>
        <label>Contract_Concatenation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Injury__c</fullName>
        <label>Date of Injury</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_of_last_Note__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The day the system sent the last email notification for billing system change reminders</description>
        <label>Day of last Note</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_in_Treatment__c</fullName>
        <formula>IF(  ISNULL( End_Date__c ) , TODAY() - Start_Date__c, Start_Date__c  -  End_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Treatment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocDueFromPerson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A field to store the primary case document due from person.</description>
        <inlineHelpText>A field to store the primary case document due from person.</inlineHelpText>
        <label>DocDueFromPerson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Educational_Involvement_at_End_of_Servic__c</fullName>
        <label>Educational Involvement at End of Servic</label>
        <picklist>
            <picklistValues>
                <fullName>Enrolled, Attending Regularly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled, Truant Regularly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Educational_Involvement_at_Start__c</fullName>
        <label>Educational Involvement at Start</label>
        <picklist>
            <picklistValues>
                <fullName>Enrolled, Attending Regularly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled, Truant Regularly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Emergency_Placement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emergency Placement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_Service_Circumstances__c</fullName>
        <label>End of Service Circumstances</label>
        <picklist>
            <picklistValues>
                <fullName>Aged out of care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behavioral needs exceed ability to serve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court decision-custody returned to bio family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court ordered placement change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not comply with services/poor attendance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elopement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family refused services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitalization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incarceration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical needs exceed ability to serve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved to a different level of care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No longer eligible/qualify for services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No longer in need of services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Mentor available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBS/Family chose another service provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBS/Guardian chose another service provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBS chose to end services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBS has not showed up for 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBS has expressed that they are not interested in the program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBS deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychiatric hospitalization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified staff not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State/County moved PBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termination of funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred to comprehensive services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to locate to provide services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_of_Service_Status__c</fullName>
        <label>End of Service Status</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No longer meets service criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sudden loss of funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Death</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Episode__c</fullName>
        <description>tie-in to AVATAR episode.  required for NC and AZ.  manual entry.</description>
        <label>Episode</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Flavor__c</fullName>
        <description>This field will store the Recordtype name of the referral from where the service assignment is created. This will be used by developers to conditionally render stuff on SA page for various flavors. If an adhoc SA is created directly without referral, this field will copy over the value from existing service Assignment available for PBS - Sravan -Sep 11, 2015.</description>
        <label>Flavor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Highest_Level_of_Education_at_End_of_Ser__c</fullName>
        <label>Highest Level of Education at End</label>
        <picklist>
            <picklistValues>
                <fullName>1 Year Preschool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2+ Years Preschool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kindergarten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Years College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4+ Years College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year Vocational/Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years Vocational/Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elementary School Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle School Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High School Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2+ Years Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Secondary Transition Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Highest_Level_of_Education_at_Start__c</fullName>
        <label>Highest Level of Education at Start</label>
        <picklist>
            <picklistValues>
                <fullName>1 Year Preschool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2+ Years Preschool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kindergarten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Years College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4+ Years College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year Vocational/Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years Vocational/Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elementary School Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle School Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High School Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2+ Years Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Secondary Transition Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_this_transfer_to_another_ServAssign__c</fullName>
        <label>Is this transfer to another ServAssign?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_Region__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRIAD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medical_Record_Number__c</fullName>
        <description>Service Assignment Record number in the format as follows:
[nine-digit unique number assigned to the program string] – [ten-digit PBS Unique Number] – [2 digit sequence number starting with 01]</description>
        <formula>IF(PBS_ServiceLocation_Count__c &gt; 0, Service_Location__r.ProgramID__c &amp; &apos;-&apos; &amp; Person_Being_Served__r.PBS_Identifier__c &amp; &apos;-&apos; &amp; LPAD(TEXT(PBS_ServiceLocation_Count__c), 2, &apos;0&apos;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Medical Record Number</inlineHelpText>
        <label>Service Record Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>used for NC and FL</description>
        <label>Model</label>
        <picklist>
            <picklistValues>
                <fullName>MENTOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Vistas Intensive In Home</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Out_of_Home_Placements_Pre_Ser__c</fullName>
        <label>Number of Out-of-Home Placements Pre-Ser</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outcomes__c</fullName>
        <label>Outcomes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PBS_ServiceLocation_Count__c</fullName>
        <label>PBS ServiceLocation Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person_Being_Served__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Being Served</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Assignment</relationshipLabel>
        <relationshipName>Service_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phase_1_End_Date__c</fullName>
        <label>Phase 1 End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_1_Start_Date__c</fullName>
        <label>Phase 1 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_2_End_Date__c</fullName>
        <label>Phase 2 End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_2_Start_Date__c</fullName>
        <label>Phase 2 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_3_End_Date__c</fullName>
        <label>Phase 3 End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_3_Start_Date__c</fullName>
        <label>Phase 3 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phase_of_Treatment__c</fullName>
        <label>Phase of Treatment</label>
        <picklist>
            <picklistValues>
                <fullName>Phase 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Reason_for_Dissatisfaction__c</fullName>
        <label>Primary Reason for Dissatisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housemates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor (Caregiver)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighborhood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prior_Location_City__c</fullName>
        <description>city of location at time of referral - MN brain injury detail</description>
        <label>Prior Location City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Location_Email__c</fullName>
        <description>email at location at time of referral - MN brain injury details</description>
        <label>Prior Location Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Prior_Location_Phone__c</fullName>
        <description>phone of location at time of referral - MN brain injury details</description>
        <label>Prior Location Phone</label>
        <type>Phone</type>
    </fields>
</CustomObject>